Fix for too much padding in the inputs in Firefox

--- a/less/gn_editor_dutch.less
+++ b/less/gn_editor_dutch.less
@@ -306,6 +306,10 @@
         }
       }
     }
+    input[type="date"].form-control, input[type="time"].form-control, input[type="datetime-local"].form-control, 
+    input[type="month"].form-control {
+      line-height: normal;
+    }
     .gn-date-picker > input[type=date].hidden, .gn-date-picker > input[type=time].hidden {
       width: 0%;
     }
